Fix text decoration on Safari browser for Player Display

--- a/src/components/PlayerDisplay.css
+++ b/src/components/PlayerDisplay.css
@@ -28,4 +28,5 @@
   text-decoration: underline #f4e869;
   text-decoration-thickness: 8px;
   text-decoration-thickness: 0.5rem;
+  -webkit-text-decoration: underline #f4e869;
 }
